# vim-pytoy

./: .gitignore  LICENSE  README.md  a.py  clean_devs.py  install_devs.py  pyproject.toml  pyrightconfig.json  report.md  ruff.toml
MEMORY/: coc_utils.py  ipython_terminal.py  quickfix_utils.py
MEMORY/buffer_executor/: __init__.py  buffer_job.py  buffer_job_manager.py  command_wrapper.py  protocol.py
MEMORY/old_command/: __init__.py  _customlist_manager.py  test_tokenizer.py
MEMORY/old_command/sub_commands/: completion_context_maker.py
MEMORY/terminal_backend/: __init__.py  application.py  executor.py  impl_main.py  impl_unix.py  protocol.py  win_utils.py
MEMORY/terminal_backend/line_buffers/: line_buffer_naive.py
MEMORY/tty_executor/: applications.py  models.py  protocol.py
SANDBOX/IMEOFFHOOKProject/: IMEOFFHOOKProject.sln  IMEOFFHOOKProject.vcxproj  README.md
SANDBOX/IMEOFFHOOKProject/IMEOFFHOOK_DLL/: IMEOFFHOOK_DLL.cpp  IMEOFFHOOK_DLL.h  IMEOFFHOOK_DLL.vcxproj  dllmain.cpp
SANDBOX/IMEOFFHOOKProject/IMEOFFHOOK_EXE/: IMEOFFHOOK_EXE.vcxproj  main.cpp
autoload/: pytoy.vim
plugin/: pytoy.vim
pythonx/pytoy/: __init__.py  coc_utils.py  command.py  debug_utils.py  environment_manager.py  executor.py  executors.py  func_utils.py  function_manager.py  ipython_terminal.py  jedi_utils.py  lightline_utils.py  pytest_executor.py  python_executor.py  pytools_executors.py  pytoy_state.py  pytoy_states.py  quickfix_handler.py  sham_console.py  timertask.py  timertask_manager.py  ui_utils.py  venv_utils.py
pythonx/pytoy/MEMORY/: jedi_utils.py  quickfix_handler.py
pythonx/pytoy/buffer_executor/: __init__.py  buffer_job.py
pythonx/pytoy/command/: __init__.py  _customlist_manager.py  _opts_converter.py
pythonx/pytoy/command_manager/: __init__.py  _opts_converter.py  (+1 more)
tests/: __init__.py  conftest.py  test_command_parser.vim  test_llm_references.py  test_parse_provider.py  test_pytoy_buffer_vim.py  test_pytoy_window_vim.py  test_text_searcher.py  test_thread_executor.py  test_tokenizer.py
tests/mocks/: __init__.py  vim.py  vim_base.py
tests_vim/: test_backend_function.vim  test_command_manager.vim  test_command_parser.vim  test_normalized_path.vim  test_pytoy_buffer.py  test_pytoy_window.py  test_range_operator.py  test_range_operator_replace_lines.py  test_range_operator_replace_text.py  test_status_line.py  test_terminal_backend.vim  test_timer_task.py  test_vscode_document.py  test_vscode_editor.py  test_vscode_uri.py
typings/vim/: __init__.pyi
(+461 files in other folders)
