[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vim-pytoy"
version = "0.1.0"
description = "Python utility for Vim/Neovim + VSCode integration"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "psutil", 
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]
windows = ["pywinpty"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["pythonx"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["pythonx"] # Explicitly tells setuptools to look in 'src'
