[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vim-pytoy"
version = "0.1.0"
description = "Python utility for Vim/Neovim + VSCode integration"
dependencies = [
    "ipython>=8.14",
    "psutil>=5.9",
    "pydantic>=2.0.0",
    "pynvim>=0.5",
    "pyte>=0.8",
    "ruff>=0.0.311",
    "toml>=0.10",
    "pip-system-certs>=0.1",
    "markitdown>=0.0.1",
    "requests>=2.31",
    "pywinpty; sys_platform == 'win32'",
    "pexpect; sys_platform == 'linux'",
    "pytoy-llm @ git+https://github.com/Sillte/pytoy-llm.git@main",
]
requires-python = ">=3.12"

[project.optional-dependencies]
windows = ["pywinpty"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["pythonx"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["pythonx"] # Explicitly tells setuptools to look in 'src'

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff",
    "ty", 
    "mypy>=1.14.1",
]


